--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -12,7 +12,13 @@ jobs:
     name: Reusable test workflow
 
   another:
-    uses: ./.github/workflows/another/action.yml
+    uses: ./.github/workflows/another.yml
     name: Reusable test workflow
     with:
         input: "This is a Test"
+
+  composite:
+    uses: ./.github/workflows/composite.yml
+    name: composite workflow
+    with:
+        username: "This is a Test"
